<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TPhaseMixing" Id="{196993c9-a35c-4c77-958d-ab963de35995}">
    <Declaration><![CDATA[TYPE TPhaseMixing :
STRUCT
	Cmd : TPhaseCmd;
	State : TPhaseState;
	
	ParamTimeSec : INT;
	
	ElapsedTimeSec : INT;
END_STRUCT
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>